--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@tauri-apps/cli": "^2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.45.0",
     "vite": "^7.0.4"
   }
 }
