--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^6.1.0",
     "globals": "^16.4.0",
     "jiti": "^2.6.1",
     "typescript": "~5.8.3",
